Fixed div main realignment

--- a/style.css
+++ b/style.css
@@ -94,11 +94,11 @@ h3 {
     height: 100%;
     width: 320px;
     position: fixed;
-    z-index: 1;
-    top: 0;
+    /* z-index: 1; */
+    /* top: 0; */
     right: 0;
     background-color: #D8C3A5;
-    overflow-x: hidden;
+    overflow: auto;
     padding-top: 20px;
 }
 
@@ -143,7 +143,7 @@ h3 {
       position: relative;
     }
     .sidebar a {float: left;}
-    div.content {margin-left: 0;}
+    .main {margin-right: 0;}
   }
   
   @media screen and (max-width: 400px) {
